--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Я сдал!</string>
+    <string name="app_name">Я сдал ЕГЭ!</string>
     <integer name="com_vk_sdk_AppId">7202923</integer>
 </resources>
